force-app/main/default/objects/Contribution__c/Contribution__c.object-meta.xml
<CustomObject>
    <description>Actual capital received against an Investment (incoming wire or ACH, matched from a Plaid-staged Wire). Detail of Investment.</description>
    <label>Contribution</label>
    <nameField>
        <displayFormat>CONT-{000}</displayFormat>
        <label>Contribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>