force-app/main/default/objects/Contribution__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Capital amount received in this contribution. Rolls up to the parent investment&apos;s Total Contributed.</description>
    <inlineHelpText>Enter the received contribution amount in USD.</inlineHelpText>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>