force-app/main/default/objects/Contribution__c/fields/Contribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Date__c</fullName>
    <description>Date the contribution funds were received.</description>
    <inlineHelpText>Enter the date the funds were received.</inlineHelpText>
    <label>Contribution Date</label>
    <type>Date</type>
</CustomField>