force-app/main/default/objects/Contribution__c/fields/Entity_Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the sender name on the incoming funds was verified against the investing entity of record.</description>
    <inlineHelpText>Check when the wire sender name has been confirmed to match the investing entity.</inlineHelpText>
    <label>Entity Name Verified</label>
    <type>Checkbox</type>
</CustomField>