force-app/main/default/objects/Contribution__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <description>Status of matching this contribution to its source bank wire and investor.</description>
    <inlineHelpText>Pending until reconciled; Cleared when matched, or Review/Unmatched when verification is needed.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>