force-app/main/default/objects/Contribution__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The offering this contribution is associated with. Enables Contributions-by-Offering reporting on the Offerings Dashboard.</description>
    <inlineHelpText>Select the offering this contribution applies to.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>