force-app/main/default/objects/Contribution__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Method by which the contribution funds were received.</description>
    <inlineHelpText>Select how the funds were received (ACH, Wire, or Cheque).</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>