force-app/main/default/objects/Contribution__c/fields/Wire__c.field-meta.xml
<CustomField>
    <fullName>Wire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Plaid-staged bank wire this contribution was matched from.</description>
    <inlineHelpText>Link the staged wire that this contribution was matched to, if applicable.</inlineHelpText>
    <label>Wire</label>
    <referenceTo>Wire__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>